@@ -1,3 +1,9 @@
+2014-07-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
+
+	* magick/composite.c: fmin() and fmax() are defined by C'99 and
+	not available everywhere, so add and use MagickFmin() and
+	MagickFmax() to improve portability.
+
 2014-07-11  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
 	* Magick++/lib/Magick++/Image.h (Magick): Fix complilation errors
